--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">PageTitle</a>
+            <a class="navbar-brand" href="#">nav</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -48,16 +48,7 @@
 
         </div>
     </div>
-    <footer>
-        <div class="container-fluid.bg-dark.text-light.p-5">
-            <div class="row"></div>
-            <div class="col">
-            </div>
-        </div>
-        </div>
-        </div>
 
-    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -71,10 +62,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     
 
-     
 
 
 
-</body> -->
+</body> 
 
 </html>
